Actualizar textos de cambio de rol

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -296,7 +296,7 @@
 
             <div class="role-upgrade__body">
                 <p class="role-upgrade__status" data-role-upgrade-status>
-                    Comparte tu certificado o formulario y te ayudaremos a migrar a cuenta de mecánico.
+                    Comparte tu certificado o formulario y te ayudaremos a cambiar a cuenta de mecánico.
                 </p>
 
                 <ul class="role-upgrade__steps">
@@ -307,7 +307,7 @@
 
                 <p class="role-upgrade__helper" data-role-upgrade-helper>
                     Tras enviar tu solicitud te llevaremos al inicio de sesión para que vuelvas a entrar cuando el
-                    admin la apruebe.
+                    administrador la apruebe.
                 </p>
             </div>
         </section>
