--- a/pages/pago-abono.html
+++ b/pages/pago-abono.html
@@ -282,7 +282,7 @@
                 const r = await fetch("/api/paypal/capture", {
                     method: "POST",
                     headers: { "Content-Type": "application/json" },
-                    body: JSON.stringify({ orderID: data.orderID })
+                    body: JSON.stringify({ orderID: data.orderID, appointmentId })
                 });
 
                 const res = await r.json();
