Add hourly booking slots with daily limits

--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -119,6 +119,10 @@
             <input type="hidden" id="visit-date" name="visit-date" />
             <p class="field-helper" id="calendar-helper">Selecciona un mecánico para ver la disponibilidad.</p>
             <p class="field-helper availability-info" id="calendar-availability" aria-live="polite" hidden></p>
+            <div class="time-slot-panel">
+              <div class="time-slot-list" id="time-slot-list" role="listbox" aria-label="Horarios disponibles"></div>
+              <p class="field-helper" id="slot-helper">Selecciona un día para ver los horarios disponibles.</p>
+            </div>
           </div>
 
           <input type="hidden" id="scheduled-for" name="scheduled-for" />
