Add workshop deletion flow for mechanics

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -257,6 +257,21 @@
 
                 <p class="form-feedback" data-workshop-feedback hidden aria-live="polite"></p>
             </form>
+
+            <div class="workshop-danger" data-workshop-delete-section hidden>
+                <div class="workshop-danger__content">
+                    <h3>Eliminar taller</h3>
+                    <p>
+                        Al eliminar tu taller se borrarán todos los datos asociados y dejará de aparecer para los clientes.
+                    </p>
+                </div>
+                <div class="workshop-danger__actions">
+                    <button type="button" class="button button--danger" data-workshop-delete>
+                        Eliminar mi taller
+                    </button>
+                    <p class="form-feedback" data-workshop-delete-feedback hidden aria-live="polite"></p>
+                </div>
+            </div>
         </section>
 
         <section
