Limit workshop scheduling button to clients

--- a/pages/perfil-taller.html
+++ b/pages/perfil-taller.html
@@ -60,7 +60,7 @@
           <div class="workshop-hero__actions">
             <a class="button button-primary" data-review-button href="#">Redactar reseña</a>
             <a class="button ghost" data-view-reviews href="./resenas-mecanicos.html">Ver reseñas</a>
-            <a class="button ghost" href="./agendar-cita.html">Agendar cita</a>
+            <a class="button ghost" data-schedule-button href="./agendar-cita.html" hidden>Agendar cita</a>
           </div>
         </div>
       </section>
