Add deposit reminder to appointment hero

--- a/pages/agendar-cita.html
+++ b/pages/agendar-cita.html
@@ -46,6 +46,10 @@
         Coordina una cita presencial en un taller cercano o recibe atención a domicilio. Todos los mecánicos de Mechapp
         cuentan con certificaciones verificadas.
       </p>
+      <p class="hero-warning" role="status">
+        <strong>Importante:</strong> Recuerda que luego de que el mecánico confirme tu cita debes realizar un abono para
+        asegurar tu cupo.
+      </p>
       <a class="button button-primary" href="#formulario">Ir al formulario</a>
     </section>
 
