--- a/pages/solicitud.html
+++ b/pages/solicitud.html
@@ -59,6 +59,12 @@
                     </div>
                 </dl>
 
+                <section class="request-detail__reschedule" data-request-reschedule hidden>
+                    <h2>Solicitud de reagendamiento</h2>
+                    <p data-request-reschedule-reason></p>
+                    <p class="request-detail__reschedule-date" data-request-reschedule-date></p>
+                </section>
+
                 <section class="request-detail__notes" data-request-notes-wrapper hidden>
                     <h2>Notas adicionales del cliente</h2>
                     <p data-request-notes></p>
