Add other service option to workshop registration

--- a/pages/registro-taller.html
+++ b/pages/registro-taller.html
@@ -96,6 +96,26 @@
                                 </p>
                                 <div class="selected-services__list" data-selected-services-list></div>
                             </div>
+                            <div class="field other-service">
+                                <label class="checkbox-field" for="other-service-toggle">
+                                    <input type="checkbox" id="other-service-toggle" data-other-service-toggle />
+                                    Otro
+                                </label>
+                                <div class="other-service__input" data-other-service-field hidden>
+                                    <label for="other-service">Describe el servicio adicional</label>
+                                    <input
+                                        type="text"
+                                        id="other-service"
+                                        name="other-service"
+                                        data-other-service-input
+                                        placeholder="Ej. Reparación de vehículos eléctricos"
+                                        autocomplete="off"
+                                    />
+                                    <p class="help-text">
+                                        Escribe un servicio que no aparezca en la lista para incluirlo en tu registro.
+                                    </p>
+                                </div>
+                            </div>
                         </div>
                         <div class="field">
                             <label for="experience-years">Años de experiencia</label>
