Add commissions shortcut to mechanic profile

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -260,6 +260,14 @@
             </p>
         </section>
 
+        <section class="commissions-cta" data-visible-for="mecanico">
+            <div class="commissions-cta__content">
+                <h2>Comisiones pendientes</h2>
+                <p>Consulta tus cobros pendientes y completa el pago directamente desde la plataforma.</p>
+            </div>
+            <a class="button button--primary" href="./comisionesPendientes.html">Ver mis comisiones</a>
+        </section>
+
         <section
             class="role-upgrade"
             aria-labelledby="role-upgrade-title"
