Enforce $20 minimum completion price

--- a/pages/perfil.html
+++ b/pages/perfil.html
@@ -519,9 +519,9 @@
             <p class="completion-dialog__details" data-complete-details hidden></p>
             <label class="form-field form-field--wide completion-dialog__field">
                 <span>Monto final del trabajo</span>
-                <input type="number" min="0" step="0.01" inputmode="decimal" data-complete-price />
+                <input type="number" min="20" step="0.01" inputmode="decimal" data-complete-price />
                 <small class="completion-dialog__helper" data-complete-helper>
-                    Ingresa el valor final cobrado al cliente.
+                    Ingresa el valor final cobrado al cliente (mínimo $20).
                 </small>
             </label>
             <p class="completion-dialog__feedback" data-complete-feedback hidden></p>
